[package]
name = "packit"
version = "0.1.0"
edition = "2024"
description = "Compress files and directories, built for large directories."
authors = ["Bryan Hyland (bhh32) <bryan.hyland32@gmail.com>"]

[dependencies]
bzip2 = "0.5.2"
clap = { version = "4.5.34", features = ["derive"] }
flate2 = "1.1.0"
indicatif = "0.17.11"
jwalk = "0.8.1"
rayon = "1.10.0"
tar = "0.4.44"
walkdir = "2.5.0"
xz2 = "0.1.7"
zip = {version = "2.5.0", features = ["deflate"] }
zstd = "0.13.3"
